--- a/电子秤.md
+++ b/电子秤.md
@@ -8,6 +8,33 @@
  国内较好的电子天平，LIANGPING JA31002电子天平最大称重3100g，精度0.01g(10mg),出厂价6480元，天猫价3240元。具有RS232接口
  JA2003具有更高的精度0.001g（max 210个）   MP200A精密电子天平也不错
  ，配有防风罩配件，内置RS232C接口，出厂价4700，天猫价2000
+ 国内最为成熟的机型，至今已拥有超过10万用户
+*源自德国技术，经过多年改进及发展，现已成为国内电磁力平衡式电子天平代表产品之一
+采用新一代的获专利一体连杆式电磁力平衡传感器，较同类产品，稳定度、线性、重复性显著提高
+内部电路经过特殊优化，使用进口元件，提高了运算性能及抗干扰能力
+功能完备，操作简便
+*具备全量程去皮功能
+*具备置零功能
+*具备百分比功能
+*具备计件功能
+*具备累计称量功能
+*具备单位转换功能
+*具备自动校准功能（外部校准）
+*配置水平仪，水平可调节
+*配置高对比液晶显示屏
+*配置下称钩
+*选配密度测试组件（上称法及下称法）
+*配置RS232接口，可连接微型打印机或计算机（波特率1200）
+开机全性能自检，故障自动报警
+*开机自动全性能自检
+*故障自动报警
+ 包括：超载报警
+       欠载报警
+       传感器损伤报警
+       秤盘安装错误报警
+       干扰报警
+       准确度超差报警
+       校准错误报警
 
 PID控制算法
 
